[package]
name = "shamir-vault"
version = "1.1.0"
edition = "2021"
authors = ["Sabir Khan <simplysabir@gmail.com>"]
license = "MIT"
description = "A Rust Crate implementation of Shamir's Secret Sharing algorithm"
repository = "https://github.com/simplysabir/shamir-vault"
readme = "README.md"
homepage = "https://github.com/simplysabir/shamir-vault"
keywords = ["cryptography", "shamir-secret", "shamir", "algorithm"]

[dependencies]
rand = {version="0.8.5",default-features=false}
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
rand = "0.8.5"